# CS402_webserver

./: CMakeLists.txt  LICENSE  README.md  file_handler.c  file_handler.h  json_handler.c  json_handler.h  logger.c  logger.h  main.c  request.c  request.h  response.c  response.h  sample_requests.txt  server.c  server.h  server_async.c  server_async.h  server_threaded.c  server_threaded.h
.github/workflows/: cmake.yml
public/: index.html  login.html  signup.html
